--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   dio: ^5.3.2
   internet_connection_checker: ^1.0.0+1
   shared_preferences: ^2.2.0
+  loader_overlay: ^2.3.0
+  overlay_support: ^2.1.0
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
@@ -65,9 +68,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
