--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   loader_overlay: ^2.3.0
   overlay_support: ^2.1.0
   flutter_bloc: ^8.1.3
+  geolocator: ^9.0.2
+  geocoding: ^2.1.0
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
