--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   geolocator: ^9.0.2
   geocoding: ^2.1.0
   fluttertoast: ^8.2.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
